3tire/k8s/deployment-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: three-tier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: init-sql
          mountPath: /docker-entrypoint-initdb.d/init.sql
          subPath: init.sql
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
      nodeSelector:
        type: backend
      volumes:
      - name: init-sql
        configMap:
          name: mysql-init-sql
