3tire/k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: three-tier
spec:
  selector:
    app: backend
  ports:
  - port: 5000
    targetPort: 5000
