3tire/k8s/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: three-tier
spec:
  selector:
    app: db
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
